@@ -724,6 +724,35 @@ directive:</p>
 </tr>
 </tbody>
 </table>
+<p>With the &quot;widths&quot; argument &quot;auto&quot; (or &quot;class&quot; value &quot;colwidths-auto&quot;),
+column widths are determined by the backend (if supported by the
+writer/backend).</p>
+<table border="1" class="colwidths-auto docutils">
+<thead valign="bottom">
+<tr><th class="head">A</th>
+<th class="head">B</th>
+<th class="head">A or B</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr><td>False</td>
+<td>False</td>
+<td>False</td>
+</tr>
+<tr><td>True</td>
+<td>False</td>
+<td>True</td>
+</tr>
+<tr><td>False</td>
+<td>True</td>
+<td>True</td>
+</tr>
+<tr><td>True</td>
+<td>True</td>
+<td>True</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div class="section" id="admonitions">
 <h3><a class="toc-backref" href="#id79">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></h3>
